Fixed too much space between title and menu bar in dialog pages.

--- a/src/app/Components/modalPage.module.css
+++ b/src/app/Components/modalPage.module.css
@@ -15,6 +15,7 @@
 
 .ModalContent {
     padding: 1em;
+    padding-top: 0em;
 }
 
 .HomeBtn {
